<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab04</string>
    <string name="action_settings">Settings</string>

    <string name="bem_vindo">Bem Vindo ao Android</string>
    <string name="dsv_por">Desenvolvido pela turma Java Android</string>
    <string name="btn_ok">OK</string>
    <string name="btn_limpar">Limpar</string>    
    
    <string name="edt_dica_acesso">Usuário</string>
    <string name="edt_dica_senha">Senha</string>
    
</resources>
